updated website, without python packages and functionality

--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -15,12 +15,12 @@
           <a href="#">SHEDEVS</a> <!-- Replace with your site name -->
         </div>
         <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#mentor">Mentorship</a></li>
-          <li><a href="#mock-interview">Mock Interviews</a></li>
-          <li><a href="#community">Community</a></li>
-          <li><a href="#contact">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/mentorship">Mentorship</a></li>
+            <li><a href="/mock-interview">Mock Interviews</a></li>
+            <li><a href="/community">Community</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
     <header>
@@ -32,8 +32,8 @@
       </section>
       
       
-    
-      <button class="cta-button">Click Me!</button>
+<!--     
+      <button class="cta-button">Click Me!</button> -->
     </section>
 <!--     
     <footer>
